--- a/pingora/Cargo.toml
+++ b/pingora/Cargo.toml
@@ -52,38 +52,8 @@ hyperlocal = "0.8"
 jemallocator = "0.5"
 
 [features]
-default = []
+default = ["rustls"]
 
-#! ### Tls
-#! Tls is provided by adding one of these features. If no tls-providing feature
-#! is added, only unencrypted http. Only one tls-providing feature can be
-#! selected at a time
-
-## Use [OpenSSL](https://crates.io/crates/openssl) for tls 
-##
-## Requires native openssl libraries and build tooling
-openssl = [
-    "pingora-core/openssl",
-    "pingora-proxy?/openssl",
-    "pingora-cache?/openssl",
-    "pingora-load-balancing?/openssl",
-    "openssl_derived",
-]
-
-## Use [BoringSSL](https://crates.io/crates/boring) for tls 
-##
-## Requires native boring libraries and build tooling
-boringssl = [
-    "pingora-core/boringssl",
-    "pingora-proxy?/boringssl",
-    "pingora-cache?/boringssl",
-    "pingora-load-balancing?/boringssl",
-    "openssl_derived",
-]
-
-## Use  [rustls](https://crates.io/crates/rustls) for tls
-##
-## ⚠️ _Highly Experimental_! ⚠️ Try it, but don't rely on it (yet)
 rustls = [
     "pingora-core/rustls",
     "pingora-proxy?/rustls",
@@ -116,7 +86,6 @@ time = []
 sentry = ["pingora-core/sentry"]
 
 # These features are intentionally not documented
-openssl_derived = ["any_tls"]
 any_tls = []
 patched_http1 = ["pingora-core/patched_http1"]
 document-features = ["dep:document-features", "proxy", "lb", "cache", "time", "sentry"]
